# vtop_py_scraper

./: .gitignore  README.md  app.py  bitmaps.json  constants.py  gen_session.py  get_attendance.py  get_exam_schedule.py  get_grades.py  get_marks.py  get_profile.py  get_sem_id.py  get_sem_ids.py  get_timetable.py  payloads.py  pyproject.toml  vtop_api.py
constants/: constants.py  registered_users.py  sem_ids.json
models/: period.py
parsers/: profile_parser.py
tests/: test_app.py
utils/: captcha_solver.py  fetch_sem_ids.py  payloads.py  sem_ids.py
vtop_scraper/: __init__.py  app.py  gen_session.py  get_attendance.py  get_exam_schedule.py  get_grades.py  get_marks.py  get_profile.py  get_sem_id.py  get_timetable.py
vtop_scraper/constants/: __init__.py  bitmaps.py  constants.py
vtop_scraper/models/: period.py
vtop_scraper/utils/: captcha_solver.py  payloads.py  sem_ids.py
